# hubot-adventure

./: .gitignore  .travis.yml  README.md  package-lock.json  package.json
.github/workflows/: nodejs.yml
docs/: gnomish.md
examples/: gnomicorn.gn
src/: errors.js  index.js  normalizing-map.js
src/gnomish/: analyzer.js  ast.js  deserializer.js  gnomish.pegjs  index.js  interpreter.js  methodregistry.js  serializer.js  sexpr.js  symboltable.js  type.js  typeregistry.js  visitor.js
src/gnomish/stdlib/: any.js  block.js  bool.js  composer.js  index.js  int.js  list.js  map.js  numbers.js  option.js  pair.js  real.js  string.js  type.js  world.js
src/model/: commands.js  game.js  index.js  noun.js  room.js  universe.js  world.js
test/: bot-commands.test.js  errors.test.js  examples.test.js  normalizing-map.test.js
test/gnomish/: analyzer.test.js  expressions.test.js  helper.js  interpreter.test.js  literals.test.js  methodregistry.test.js  serializer.test.js  stdlib.test.js  symboltable.test.js  types.test.js
test/gnomish/lib/: assertion.js
test/gnomish/stdlib/: any.gn  block.gn  bool.gn  int.gn  list.gn  map.gn  option.gn  pair.gn  string.gn  type.gn
test/lib/: assertion.js
test/model/: game.test.js  gnomish.test.js  noun.test.js  room.test.js  universe.test.js  world.test.js
test/model/gnomish/: noun.gn  room.gn  world.gn
