describe("Bool", {
  it("&&", {
    assert.equal(true && true, true)
    assert.equal(true && false, false)
    assert.equal(false && true, false)
    assert.equal(false && false, false)
  })

  it("||", {
    assert.equal(true || true, true)
    assert.equal(true || false, true)
    assert.equal(false || true, true)
    assert.equal(false || false, false)
  })
})
