describe("Bool", {
  it("&&", {
    assert.equal(true && true, true)
    assert.equal(true && false, false)
    assert.equal(false && true, false)
    assert.equal(false && false, false)
  })

  it("||", {
    assert.equal(true || true, true)
    assert.equal(true || false, true)
    assert.equal(false || true, true)
    assert.equal(false || false, false)
  })

  it("unary !", {
    assert.equal(!true, false)
    assert.equal(!false, true)
  })

  it("copies by identity", {
    assert.same(true.copy(), true)
    assert.same(false.copy(), false)
  })

  it("converts itself to a String", {
    assert.equal(true.string(), "true")
    assert.equal(false.string(), "false")
  })
})
