assert.equal(3 + 4, 7)
assert.equal(5 - 8, -3)
assert.equal(6 * 3, 18)
assert.equal(10 / 2, 5.0)
assert.equal(11 // 2, 5)
assert.equal(2 ^ 3, 8)

assert.isTrue(3 == 3)
assert.isFalse(3 == 4)

assert.isTrue(0 < 5)
assert.isFalse(5 < 0)

assert.isTrue(0 <= 5)
assert.isTrue(0 <= 0)
assert.isFalse(5 <= 0)

assert.isTrue(10 > 0)
assert.isFalse(0 > 10)
assert.isFalse(0 > 0)

assert.isTrue(10 >= 0)
assert.isTrue(10 >= 10)
assert.isFalse(0 >= 10)
